force-app/main/default/objects/Activity/fields/Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>Activity_Status__c</fullName>
    <label>Activity Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activity_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>