force-app/main/default/objects/Activity/fields/Activity_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Sub_Type__c</fullName>
    <label>Activity Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activity_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin and Planning</fullName>
            </value>
            <value>
                <fullName>Annual Leave</fullName>
            </value>
            <value>
                <fullName>Dealer Visit</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Office meeting</fullName>
            </value>
            <value>
                <fullName>Product Presentation</fullName>
            </value>
            <value>
                <fullName>Public Holiday</fullName>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Travelling</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Incoming</fullName>
                <isActive>false</isActive>
                <label>Incoming</label>
            </value>
            <value>
                <fullName>Outgoing</fullName>
                <isActive>false</isActive>
                <label>Outgoing</label>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
                <isActive>false</isActive>
                <label>Whatsapp</label>
            </value>
            <value>
                <fullName>With Dealer Sales Rep</fullName>
                <isActive>false</isActive>
                <label>With Dealer Sales Rep</label>
            </value>
            <value>
                <fullName>With Internal Associate</fullName>
                <isActive>false</isActive>
                <label>With Internal Associate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>