force-app/main/default/objects/Activity/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face to Face Meeting</fullName>
            </value>
            <value>
                <fullName>Telesales</fullName>
            </value>
            <value>
                <fullName>Justified Miscalls</fullName>
            </value>
            <value>
                <fullName>Co-call</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Instant Messenger</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Lunch &amp; Learn</fullName>
            </value>
            <value>
                <fullName>Mini Workshop</fullName>
                <isActive>false</isActive>
                <label>Mini Workshop</label>
            </value>
            <value>
                <fullName>Non-Agenda Visit</fullName>
                <isActive>false</isActive>
                <label>Non-Agenda Visit</label>
            </value>
            <value>
                <fullName>Social Media</fullName>
                <isActive>false</isActive>
                <label>Social Media</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>