force-app/main/default/objects/Activity/fields/Co_Caller__c.field-meta.xml
<CustomField>
    <fullName>Co_Caller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Caller</label>
    <referenceTo>Co_Caller__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>