force-app/main/default/objects/Activity/fields/Demo_On__c.field-meta.xml
<CustomField>
    <fullName>Demo_On__c</fullName>
    <label>Demo On</label>
    <type>TextArea</type>
</CustomField>