force-app/main/default/objects/Activity/fields/External_Co_Caller__c.field-meta.xml
<CustomField>
    <fullName>External_Co_Caller__c</fullName>
    <label>External Co-Caller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>