force-app/main/default/objects/Activity/fields/Internal_Co_Caller__c.field-meta.xml
<CustomField>
    <fullName>Internal_Co_Caller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Co-Caller</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>