force-app/main/default/objects/Activity/fields/Internal_Co_Caller_Users__c.field-meta.xml
<CustomField>
    <fullName>Internal_Co_Caller_Users__c</fullName>
    <label>Internal Co-Caller Users</label>
    <type>TextArea</type>
</CustomField>