force-app/main/default/objects/Activity/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Activities</relationshipLabel>
    <relationshipName>Order_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>