force-app/main/default/objects/Activity/fields/Presentation_On__c.field-meta.xml
<CustomField>
    <fullName>Presentation_On__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presentation On</label>
    <referenceTo>Presentation_On__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>