force-app/main/default/objects/Activity/fields/Presentation_On_Items__c.field-meta.xml
<CustomField>
    <fullName>Presentation_On_Items__c</fullName>
    <label>Presentation On Items</label>
    <type>TextArea</type>
</CustomField>